# SwinceOMatik

./: .dockerignore  .env.template  .gitignore  Dockerfile  docker-compose.yml  init.sql  pyproject.toml
.github/workflows/: build-push.yaml
discordClient/: __init__.py  requirements.txt
discordClient/assets/databases/: 779434463834275841.db
discordClient/commands/: __init__.py  swince.py
swincer/: Dockerfile  controller.py  model.py  requirements.txt
swincer/app/: __init__.py  config.py
swincer/app/controllers/: Session.py  controller.py
swincer/app/models/: __init__.py  message.py  relations.py  swince.py  user.py
